<resources>
    <string name="app_name">CV_v1</string>
    <string name="fullName">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="skills">Skills</string>
    <string name="reset">Rest</string>
    <string name="next">Next</string>







</resources>